Staj damgasi eklendi

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
 
     </div>
 
-    <footer>Petimebak Linux Yaz Kampı 2014'te demo proje olarak hazırlanmıştır.</footer>
+    <footer>Petimebak Ahmet ERKOC Staj demo proje olarak hazırlanmıştır.</footer>
 
 </div>
 
